src/snapshots/untitled_lang__lexer__tests__ident.snap
---
source: src/lexer.rs
expression: "tokenize(\"a bc\")"
---
(
    [
        Token {
            kind: Ident,
            text: "a",
            range: 0..1,
        },
        Token {
            kind: Whitespace,
            text: " ",
            range: 1..2,
        },
        Token {
            kind: Ident,
            text: "bc",
            range: 2..4,
        },
        Token {
            kind: Eof,
            text: "",
            range: 4..4,
        },
    ],
    [],
)
