src/snapshots/untitled_lang__lexer__tests__ketword.snap
---
source: src/lexer.rs
expression: "tokenize(\"let if else while break\")"
---
(
    [
        Token {
            kind: LetKw,
            text: "let",
            range: 0..3,
        },
        Token {
            kind: Whitespace,
            text: " ",
            range: 3..4,
        },
        Token {
            kind: IfKw,
            text: "if",
            range: 4..6,
        },
        Token {
            kind: Whitespace,
            text: " ",
            range: 6..7,
        },
        Token {
            kind: ElseKw,
            text: "else",
            range: 7..11,
        },
        Token {
            kind: Whitespace,
            text: " ",
            range: 11..12,
        },
        Token {
            kind: WhileKw,
            text: "while",
            range: 12..17,
        },
        Token {
            kind: Whitespace,
            text: " ",
            range: 17..18,
        },
        Token {
            kind: BreakKw,
            text: "break",
            range: 18..23,
        },
        Token {
            kind: Eof,
            text: "",
            range: 23..23,
        },
    ],
    [],
)
