src/snapshots/untitled_lang__lexer__tests__operator.snap
---
source: src/lexer.rs
expression: "tokenize(\"+ - * / % == != >= <= > <\")"
---
(
    [
        Token {
            kind: Plus,
            text: "+",
            range: 0..1,
        },
        Token {
            kind: Whitespace,
            text: " ",
            range: 1..2,
        },
        Token {
            kind: Minus,
            text: "-",
            range: 2..3,
        },
        Token {
            kind: Whitespace,
            text: " ",
            range: 3..4,
        },
        Token {
            kind: Star,
            text: "*",
            range: 4..5,
        },
        Token {
            kind: Whitespace,
            text: " ",
            range: 5..6,
        },
        Token {
            kind: Slash,
            text: "/",
            range: 6..7,
        },
        Token {
            kind: Whitespace,
            text: " ",
            range: 7..8,
        },
        Token {
            kind: Percent,
            text: "%",
            range: 8..9,
        },
        Token {
            kind: Whitespace,
            text: " ",
            range: 9..10,
        },
        Token {
            kind: EqEq,
            text: "==",
            range: 10..12,
        },
        Token {
            kind: Whitespace,
            text: " ",
            range: 12..13,
        },
        Token {
            kind: Neq,
            text: "!=",
            range: 13..15,
        },
        Token {
            kind: Whitespace,
            text: " ",
            range: 15..16,
        },
        Token {
            kind: Ge,
            text: ">=",
            range: 16..18,
        },
        Token {
            kind: Whitespace,
            text: " ",
            range: 18..19,
        },
        Token {
            kind: Le,
            text: "<=",
            range: 19..21,
        },
        Token {
            kind: Whitespace,
            text: " ",
            range: 21..22,
        },
        Token {
            kind: Gt,
            text: ">",
            range: 22..23,
        },
        Token {
            kind: Whitespace,
            text: " ",
            range: 23..24,
        },
        Token {
            kind: Lt,
            text: "<",
            range: 24..25,
        },
        Token {
            kind: Eof,
            text: "",
            range: 25..25,
        },
    ],
    [],
)
